# dllhelper

./: .codespellrc  .gersemirc  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  build.bat  build_vc.bat  dllhelper.hpp  example.cpp  lockfile.json  sonar-project.properties
.github/workflows/: build.yml  build_win.yml  ci_tests.yml  pre-commit-check.yml  sonarcloud.yml
cmake/: dllhelper-config.cmake.in  dllhelperConfig.cmake.in  vart.dllhelper-config.cmake.in
examples/: CMakeLists.txt  example_linux.cpp  example_win.cpp  linux.cpp  win.cpp
include/: dllhelper.h  dllhelper.hpp
include/vart/dllhelper/: CMakeLists.txt  dllhelper.h
infra/cmake/: appleclang-toolchain.cmake  gnu-toolchain.cmake  llvm-libc++-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake  use-fetch-content.cmake  vart-install-library-config.cmake
src/: dll_helper_linux.cpp  dll_helper_win.cpp  example.cpp  example_linux.cpp  example_win.c  example_win.cpp
src/samples/: CMakeLists.txt  example_linux.cpp  example_win.c  example_win.cpp
src/vart/dllhelper/: CMakeLists.txt  dll_helper_linux.cpp  dll_helper_win.cpp
test/: CMakeLists.txt  dll_helper_mock.cpp  dllhelper.ut.cpp
tests/vart/dllhelper/: CMakeLists.txt  dll_helper_mock.cpp  dllhelper.mock.cpp  dllhelper.test.cpp  dllhelper.ut.cpp
